# easy_bill

./: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  docker-compose_pytest.yml  pyproject.toml  pytest.ini
migration/: env.py
migration/versions/: c7f46fcb9be6-25082024_225119_initial.py
src/: config.py  db.py  exceptions.py  translations.py
src/receipt/: dependencies.py  models.py  receipt_constructor.py  schemas.py  utils.py  views.py
src/user/: dependencies.py  exceptions.py  models.py  schemas.py  utils.py  views.py
tests/: conftest.py  factories.py  helper.py
tests/receipt/: test_receipt_create.py  test_receipt_get.py  test_receipt_get_public.py
tests/user/: test_user_login.py  test_user_register.py
